@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.59)
-AC_INIT(libmox, 2.0.3, mok@bioxray.au.dk)
+AC_INIT(libmox, 2.1, mok@bioxray.au.dk)
 
 AC_CONFIG_SRCDIR([src/libatom.c])
 AC_CONFIG_AUX_DIR([config])
